--- a/math.bib
+++ b/math.bib
@@ -98,6 +98,97 @@
   year={2019}
 }
 
+@article{duncan2019geometry,
+  title={On the geometry of Stein variational gradient descent},
+  author={Duncan, Andrew and N{\"u}sken, Nikolas and Szpruch, Lukasz},
+  journal={arXiv preprint arXiv:1912.00894},
+  year={2019}
+}
+
+@article{liu2017stein,
+  title={Stein variational gradient descent as gradient flow},
+  author={Liu, Qiang},
+  journal={arXiv preprint arXiv:1704.07520},
+  year={2017}
+}
+
+@article{pu2017vae,
+  title={VAE learning via Stein variational gradient descent},
+  author={Pu, Yunchen and Gan, Zhe and Henao, Ricardo and Li, Chunyuan and Han, Shaobo and Carin, Lawrence},
+  journal={arXiv preprint arXiv:1704.05155},
+  year={2017}
+}
+
+@article{liu2017policy,
+  title={Stein variational policy gradient},
+  author={Liu, Yang and Ramachandran, Prajit and Liu, Qiang and Peng, Jian},
+  journal={arXiv preprint arXiv:1704.02399},
+  year={2017}
+}
+
+@article{kassab2020federated,
+  title={Federated Generalized Bayesian Learning via Distributed Stein Variational Gradient Descent},
+  author={Kassab, Rahif and Simeone, Osvaldo},
+  journal={arXiv preprint arXiv:2009.06419},
+  year={2020}
+}
+
+@article{nusken2021stein,
+  title={Stein Variational Gradient Descent: many-particle and long-time asymptotics},
+  author={N{\"u}sken, Nikolas and Renger, DR},
+  journal={arXiv preprint arXiv:2102.12956},
+  year={2021}
+}
+
+@article{zhang2019scalable,
+  title={Scalable thompson sampling via optimal transport},
+  author={Zhang, Ruiyi and Wen, Zheng and Chen, Changyou and Carin, Lawrence},
+  journal={arXiv preprint arXiv:1902.07239},
+  year={2019}
+}
+
+
+@inproceedings{zhang2018learning,
+  title={Learning structural weight uncertainty for sequential decision-making},
+  author={Zhang, Ruiyi and Li, Chunyuan and Chen, Changyou and Carin, Lawrence},
+  booktitle={International Conference on Artificial Intelligence and Statistics},
+  pages={1137--1146},
+  year={2018},
+  organization={PMLR}
+}
+
+@inproceedings{zhang2020stochastic,
+  title={Stochastic particle-optimization sampling and the non-asymptotic convergence theory},
+  author={Zhang, Jianyi and Zhang, Ruiyi and Carin, Lawrence and Chen, Changyou},
+  booktitle={International Conference on Artificial Intelligence and Statistics},
+  pages={1877--1887},
+  year={2020},
+  organization={PMLR}
+}
+
+@inproceedings{tao2019variational,
+  title={Variational annealing of GANs: A Langevin perspective},
+  author={Tao, Chenyang and Dai, Shuyang and Chen, Liqun and Bai, Ke and Chen, Junya and Liu, Chang and Zhang, Ruiyi and Bobashev, Georgiy and Duke, Lawrence Carin},
+  booktitle={International conference on machine learning},
+  pages={6176--6185},
+  year={2019},
+  organization={PMLR}
+}
+
+
+
+@article{lu2019scaling,
+  title={Scaling limit of the Stein variational gradient descent: The mean field regime},
+  author={Lu, Jianfeng and Lu, Yulong and Nolen, James},
+  journal={SIAM Journal on Mathematical Analysis},
+  volume={51},
+  number={2},
+  pages={648--671},
+  year={2019},
+  publisher={SIAM}
+}
+
+
 @inproceedings{liu2016stein,
   title={Stein variational gradient descent: A general purpose {B}ayesian inference algorithm},
   author={Liu, Qiang and Wang, Dilin},
@@ -267,11 +358,15 @@ MRREVIEWER = {V. K. Ohanyan},
   publisher={Elsevier}
 }
 
-@article{duncan2019geometry,
-  title={On the geometry of Stein variational gradient descent},
-  author={Duncan, A and Nuesken, Nikolas and Szpruch, Lukasz},
-  journal={arXiv preprint arXiv:1912.00894},
-  year={2019}
+@article{carmeli2010vector,
+  title={Vector valued reproducing kernel Hilbert spaces and universality},
+  author={Carmeli, Claudio and De Vito, Ernesto and Toigo, Alessandro and Umanit{\'a}, Veronica},
+  journal={Analysis and Applications},
+  volume={8},
+  number={01},
+  pages={19--61},
+  year={2010},
+  publisher={World Scientific}
 }
 
 
@@ -5897,5 +5992,15 @@ MRREVIEWER = {Ramendra Krishna Bose},
   booktitle={International Conference on Machine Learning},
   pages={1292--1301},
   year={2017},
+  organization={PMLR}
+}
+
+
+@inproceedings{rolland2020double,
+  title={Double-loop unadjusted langevin algorithm},
+  author={Rolland, Paul and Eftekhari, Armin and Kavis, Ali and Cevher, Volkan},
+  booktitle={International Conference on Machine Learning},
+  pages={8169--8177},
+  year={2020},
   organization={PMLR}
 }
