--- a/math.bib
+++ b/math.bib
@@ -369,6 +369,36 @@ MRREVIEWER = {V. K. Ohanyan},
   publisher={World Scientific}
 }
 
+@inproceedings{liu2016kernelized,
+  title={A kernelized Stein discrepancy for goodness-of-fit tests},
+  author={Liu, Qiang and Lee, Jason and Jordan, Michael},
+  booktitle={International conference on machine learning},
+  pages={276--284},
+  year={2016},
+  organization={PMLR}
+}
+
+@inproceedings{chwialkowski2016kernel,
+  title={A kernel test of goodness of fit},
+  author={Chwialkowski, Kacper and Strathmann, Heiko and Gretton, Arthur},
+  booktitle={International conference on machine learning},
+  pages={2606--2615},
+  year={2016},
+  organization={PMLR}
+}
+
+@article{oates2019convergence,
+  title={Convergence rates for a class of estimators based on Stein’s method},
+  author={Oates, Chris J and Cockayne, Jon and Briol, Fran{\c{c}}ois-Xavier and Girolami, Mark and others},
+  journal={Bernoulli},
+  volume={25},
+  number={2},
+  pages={1141--1159},
+  year={2019},
+  publisher={Bernoulli Society for Mathematical Statistics and Probability}
+}
+
+
 
 @inproceedings{goodfellow2014generative,
   title={Generative adversarial nets},
